data/derived/comb/progs/unify/prog6883.ml.out
Characters 124-125:
  List.fold_left f base args;;
                 ^
Error: This expression has type int -> int -> int list list list
       but an expression was expected of type int -> int -> int
       Type int list list list is not compatible with type int 
